[gd_scene load_steps=21 format=2]

[ext_resource path="res://Scripts/Player/player.gd" type="Script" id=1]
[ext_resource path="res://Materials/Player/transparent.material" type="Material" id=2]
[ext_resource path="res://Scripts/Player/camera_movement.gd" type="Script" id=3]
[ext_resource path="res://Assets/Obj/new_hamster.obj" type="ArrayMesh" id=4]
[ext_resource path="res://Materials/Player/white.material" type="Material" id=5]
[ext_resource path="res://Materials/Player/black.material" type="Material" id=6]
[ext_resource path="res://Shaders/cel.shader" type="Shader" id=7]
[ext_resource path="res://Animations/player.anim" type="Animation" id=8]
[ext_resource path="res://Audio/SFX/fall.wav" type="AudioStream" id=9]
[ext_resource path="res://Audio/SFX/spawn.wav" type="AudioStream" id=10]
[ext_resource path="res://Audio/SFX/collectable.wav" type="AudioStream" id=11]
[ext_resource path="res://Audio/SFX/jump.wav" type="AudioStream" id=12]
[ext_resource path="res://Audio/SFX/select.wav" type="AudioStream" id=13]

[sub_resource type="SphereMesh" id=1]
material = ExtResource( 2 )

[sub_resource type="SphereShape" id=2]
radius = 5.17999

[sub_resource type="SpatialMaterial" id=3]
flags_unshaded = true
params_cull_mode = 1
params_grow = true
params_grow_amount = 0.01
albedo_color = Color( 0.101961, 0.109804, 0.172549, 1 )

[sub_resource type="ShaderMaterial" id=4]
next_pass = SubResource( 3 )
shader = ExtResource( 7 )
shader_param/use_shade = false
shader_param/use_specular = false
shader_param/use_rim = false
shader_param/base_use_light_color = false
shader_param/specular_use_light_color = false
shader_param/rim_use_light_color = false
shader_param/base_color = Color( 0.956863, 0.956863, 0.956863, 1 )
shader_param/shade_color = Color( 0.337255, 0.423529, 0.52549, 1 )
shader_param/specular_tint = Color( 0.5, 0.5, 0.5, 1 )
shader_param/rim_tint = Color( 0.5, 0.5, 0.5, 1 )
shader_param/shade_threshold = 0.106
shader_param/shade_softness = 0.0
shader_param/specular_threshold = 0.0
shader_param/specular_softness = 0.0
shader_param/rim_threshold = 0.0
shader_param/rim_spread = 0.0
shader_param/rim_softness = 0.0

[sub_resource type="SphereMesh" id=5]
material = SubResource( 4 )
radius = 0.2
height = 0.4
radial_segments = 6
rings = 6

[sub_resource type="Curve" id=6]
min_value = 0.5
max_value = 2.0
_data = [ Vector2( 0.00799196, 0.54215 ), 0.0, 0.0, 0, 0, Vector2( 1, 1.2665 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=7]
offsets = PoolRealArray( 0, 0.225166, 1 )
colors = PoolColorArray( 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1 )

[node name="Player" type="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 7.177, 0 )
script = ExtResource( 1 )

[node name="Ball" type="MeshInstance" parent="."]
transform = Transform( 5.18669, 0, 0, 0, 5.1867, 0, 0, 0, 5.1867, 0, -3.00407e-05, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="Target" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.74849, 0 )

[node name="Camera" type="Camera" parent="Target"]
transform = Transform( -1, 0, -8.74228e-08, -2.46229e-08, 0.959516, 0.281653, 8.38836e-08, 0.281653, -0.959516, 0, 5.96519, -11.7937 )
current = true
fov = 90.0
far = 600.0
script = ExtResource( 3 )

[node name="Hamster" type="MeshInstance" parent="."]
transform = Transform( -0.013, 3.96632e-11, 1.13581e-09, 0, 0.0129921, -0.000453694, -1.1365e-09, -0.000453694, -0.0129921, 0, -1, -3.876 )
mesh = ExtResource( 4 )
material/0 = ExtResource( 5 )
material/1 = ExtResource( 5 )
material/2 = ExtResource( 5 )
material/3 = ExtResource( 6 )
material/4 = ExtResource( 6 )
material/5 = ExtResource( 6 )
material/6 = ExtResource( 6 )
material/7 = ExtResource( 6 )
material/8 = ExtResource( 5 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -3.00407e-05, 0 )
shape = SubResource( 2 )

[node name="DetectJumpPad" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, -6, 0 )
collision_mask = 4

[node name="DetectBoostPad" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, -6, 0 )
collision_mask = 8

[node name="DetectGoal" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, -6, 0 )
collision_mask = 16

[node name="DetectGround" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, -8, 0 )

[node name="DetectIfFalling" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, -10, 0 )

[node name="CPUParticles" type="CPUParticles" parent="."]
transform = Transform( 1.48512, 0.0102492, -0.0023196, 0, -0.327829, -1.44852, -0.0105084, 1.44848, -0.327821, 0, -3.86333, 0.514925 )
amount = 3
lifetime = 0.25
speed_scale = 0.5
explosiveness = 0.18
randomness = 0.5
local_coords = false
mesh = SubResource( 5 )
emission_shape = 3
emission_points = PoolVector3Array( -0.5, 0, 0, 0, 0, 0, 0.5, 0, 0 )
flag_rotate_y = true
spread = 173.93
gravity = Vector3( 0, 0, -7 )
radial_accel = 1.0
angle = 18.0
scale_amount = 2.0
scale_amount_curve = SubResource( 6 )
color_ramp = SubResource( 7 )

[node name="Animation" type="AnimationPlayer" parent="."]
anims/player = ExtResource( 8 )

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 9 )
bus = "SFX"

[node name="SpawnSound" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 10 )
bus = "SFX"

[node name="CollectiblesSound" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 11 )
bus = "SFX"

[node name="JumpSound" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 12 )
bus = "SFX"

[node name="FinishLevelSound" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 13 )
bus = "SFX"
